# oa4a

./: Dockerfile  LICENSE  Makefile  README.md  openapi.jq  pyproject.toml
.github/workflows/: docker-publish.yml
oa4a/: amazon_bedrock_provider.py  mock_provider.py  model.py  ollama_provider.py  provider.py  provider_utils.py  server.py
tests/: test_amazon_bedrock_provider.py
