[tool.poetry]
name = "oa4a"
version = "0.1.0"
description = "Extensible OpenAI API bridge supporting multiple LLM providers"
authors = ["David Gootman <gootman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.25.1"
yq = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
