[tool.poetry]
name = "oa4a"
version = "0.1.0"
description = "Extensible OpenAI API bridge supporting multiple LLM providers"
authors = ["David Gootman <gootman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.11"
boto3-stubs = {extras = ["bedrock-runtime"], version = "^1.34.11"}
fastapi = "^0.111.0"
loguru = "^0.7.2"
requests = "^2.31.0"
sse-starlette = "^2.1.0"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.25.1"
yq = "^3.2.3"
pylint = {extras = ["spelling"], version = "^3.0.2"}
black = "^23.11.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
